TestRepo2/src/objects/Recipe_Occasion__c.object
<CustomObject>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occasion_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occasion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occasion__c</fullName>
        <label>Occasion</label>
        <referenceTo>Occasion__c</referenceTo>
        <relationshipLabel>Recipe Occasions</relationshipLabel>
        <relationshipName>Recipe_Occasions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipe Occasions</relationshipLabel>
        <relationshipName>Recipe_Occasions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Recipe Occasion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROCC-{0000}</displayFormat>
        <label>RecipeOccasion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Occasions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>